--- a/campbell'sapp/src/main/res/xml/pref_notification.xml
+++ b/campbell'sapp/src/main/res/xml/pref_notification.xml
@@ -56,10 +56,10 @@
         android:dependency="notification_new_message"
         android:key="notification_widget_event"
         android:title="@string/pref_title_widget_event"/>
-    <SwitchPreference
+    <!-- <SwitchPreference
         android:defaultValue="true"
         android:dependency="notification_new_message"
         android:key="notification_show_display_name"
-        android:title="@string/pref_title_show_display_name"/>
+        android:title="@string/pref_title_show_display_name"/> -->
 
 </PreferenceScreen>
